公有或私有对象下载API,其他修改
