# docs/swagger.json
@@ -818,7 +818,7 @@
                 "tags": [
                     "object对象"
                 ],
-                "summary": "下载对象",
+                "summary": "分片下载对象",
                 "parameters": [
                     {
                         "type": "string",
@@ -932,7 +932,7 @@
                         "description": "OK",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/controllers.BaseJSON"
+                            "$ref": "#/definitions/controllers.objPostJSON"
                         }
                     },
                     "400": {
@@ -1378,6 +1378,81 @@
                 }
             }
         },
+        "/obs/{bucketname}/{objpath}": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "浏览器端下载文件对象，公共文件对象或当前用户(如果用户登录了)文件对象下载，没有权限下载非公共文件对象或不属于当前用户文件对象\n* 支持断点续传，通过HTTP头 Range和Content-Range\n* 跨域访问和安全\n跨域又需要传递token进行权限认证，我们推荐token通过header传递，不推荐在url中传递token,处理不当会增加token泄露等安全问题的风险。\n我们支持token通过url参数传递，auth-token和jwt token两种token对应参数名称分别为token和jwt。出于安全考虑，请不要直接把token明文写到前端\u003ca\u003e标签href属性中，以防token泄密。请动态拼接token到url，比如如下方式：\n$(\"xxx\").on('click', function(e){\ne.preventDefault();\nlet token = 从SessionStorage、LocalStorage、内存等等存放token的安全地方获取\nlet url = $(this).attr('href') + '?token=' + token; // auth-token\nlet url = $(this).attr('href') + '?jwt=' + token;   // jwt token\nwindow.location.href = url;\n}",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "对象下载"
+                ],
+                "summary": "公共或私有对象下载",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "bucketname",
+                        "name": "bucketname",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "objpath",
+                        "name": "objpath",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "file",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "206": {
+                        "description": "Partial Content",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "416": {
+                        "description": "Requested Range Not Satisfiable",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            }
+        },
         "/user/register/": {
             "post": {
                 "description": "注册用户",
@@ -1564,13 +1639,19 @@
         "controllers.ObjMetadataJSON": {
             "type": "object",
             "properties": {
+                "bucket_name": {
+                    "type": "string"
+                },
                 "code": {
                     "type": "integer"
                 },
                 "code_text": {
                     "type": "string"
                 },
-                "data": {
+                "dir_path": {
+                    "type": "string"
+                },
+                "obj": {
                     "type": "object",
                     "$ref": "#/definitions/models.HarborObject"
                 }
@@ -1787,6 +1868,20 @@
                 },
                 "dir_path": {
                     "type": "string"
+                }
+            }
+        },
+        "controllers.objPostJSON": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "code_text": {
+                    "type": "string"
+                },
+                "created": {
+                    "type": "boolean"
                 }
             }
         },
